Fix labeled NOP removing

--- a/trunk/doc/Demos/Examples/NopRemover/NopRemover.csproj
+++ b/trunk/doc/Demos/Examples/NopRemover/NopRemover.csproj
@@ -30,7 +30,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="Mono.Cecil">
-      <HintPath>..\..\..\..\..\vendors\Mono.Cecil\current\bin\Debug\Mono.Cecil.dll</HintPath>
+      <HintPath>..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\Debug\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="SolidOpt">
       <HintPath>..\..\..\..\SolidOpt\src\bin\Debug\SolidOpt.dll</HintPath>
