--- a/trunk/doc/Demos/Examples/OverflowArithmeticRemover/OverflowArithmeticRemover.csproj
+++ b/trunk/doc/Demos/Examples/OverflowArithmeticRemover/OverflowArithmeticRemover.csproj
@@ -41,7 +41,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="Mono.Cecil">
-      <HintPath>..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\Debug\Mono.Cecil.dll</HintPath>
+      <HintPath>..\..\..\..\..\vendors\Mono.Cecil\current\bin\Debug\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="SolidOpt">
       <HintPath>..\..\..\..\SolidOpt\src\bin\Debug\SolidOpt.dll</HintPath>
