--- a/trunk/doc/Demos/Examples/NopRemover/NopRemover.csproj
+++ b/trunk/doc/Demos/Examples/NopRemover/NopRemover.csproj
@@ -29,11 +29,11 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
-    <Reference Include="Mono.Cecil">
-      <HintPath>..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\Debug\Mono.Cecil.dll</HintPath>
+    <Reference Include="Cecil.Decompiler">
+      <HintPath>..\..\..\..\SolidOpt\src\vendors\Cecil.Decompiler\Cecil.Decompiler\bin\$(Configuration)\Cecil.Decompiler.dll</HintPath>
     </Reference>
-    <Reference Include="SolidOpt">
-      <HintPath>..\..\..\..\SolidOpt\src\bin\Debug\SolidOpt.dll</HintPath>
+    <Reference Include="Mono.Cecil">
+      <HintPath>..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\$(Configuration)\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -49,6 +49,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup>
-    <PostBuildEvent>..\..\post-build.bat</PostBuildEvent>
+    <PostBuildEvent>..\..\post-build-$(Configuration).bat</PostBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\SolidOpt\src\SolidOpt.csproj">
+      <Project>{3975D054-C5DC-4BE3-9213-B1BBC3630DC0}</Project>
+      <Name>SolidOpt</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
