--- a/trunk/doc/Demos/Examples/StandardLoader/Loader/Loader.csproj
+++ b/trunk/doc/Demos/Examples/StandardLoader/Loader/Loader.csproj
@@ -31,13 +31,13 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="Cecil.Decompiler">
-      <HintPath>..\..\..\..\..\..\vendors\Cecil.Decompiler\current\Cecil.Decompiler\bin\Debug\Cecil.Decompiler.dll</HintPath>
+      <HintPath>..\..\..\..\..\SolidOpt\src\vendors\Cecil.Decompiler\Cecil.Decompiler\bin\$(Configuration)\Cecil.Decompiler.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil">
-      <HintPath>..\..\..\..\..\..\vendors\Mono.Cecil\current\bin\Debug\Mono.Cecil.dll</HintPath>
+      <HintPath>..\..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\$(Configuration)\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="SolidOpt">
-      <HintPath>..\..\..\..\..\SolidOpt\src\bin\Debug\SolidOpt.dll</HintPath>
+      <HintPath>..\..\..\..\..\SolidOpt\src\bin\$(Configuration)\SolidOpt.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
