--- a/trunk/doc/Demos/Optimization Methods/Inline/Inline.csproj
+++ b/trunk/doc/Demos/Optimization Methods/Inline/Inline.csproj
@@ -28,13 +28,13 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="Cecil.Decompiler">
-      <HintPath>..\..\..\..\SolidOpt\vendors\Cecil.Decompiler\Cecil.Decompiler\bin\Debug\Cecil.Decompiler.dll</HintPath>
+      <HintPath>..\..\..\..\..\SolidOpt\src\vendors\Cecil.Decompiler\Cecil.Decompiler\bin\$(Configuration)\Cecil.Decompiler.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil">
-      <HintPath>..\..\..\..\SolidOpt\vendors\Mono.Cecil\Mono.Cecil\bin\Release\Mono.Cecil.dll</HintPath>
+      <HintPath>..\..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\$(Configuration)\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="SolidOpt">
-      <HintPath>..\..\..\..\SolidOpt\src\bin\Debug\SolidOpt.dll</HintPath>
+      <HintPath>..\..\..\..\SolidOpt\src\bin\$(Configuration)\SolidOpt.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
