--- a/trunk/doc/Demos/Examples/StandardLoader/Loader/Loader.csproj
+++ b/trunk/doc/Demos/Examples/StandardLoader/Loader/Loader.csproj
@@ -30,15 +30,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
-    <Reference Include="Cecil.Decompiler">
-      <HintPath>..\..\..\..\..\SolidOpt\src\vendors\Cecil.Decompiler\Cecil.Decompiler\bin\$(Configuration)\Cecil.Decompiler.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Cecil">
-      <HintPath>..\..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\bin\$(Configuration)\Mono.Cecil.dll</HintPath>
-    </Reference>
-    <Reference Include="SolidOpt">
-      <HintPath>..\..\..\..\..\SolidOpt\src\bin\$(Configuration)\SolidOpt.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -58,6 +49,18 @@
     <Compile Include="TransformLoader.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\SolidOpt\src\SolidOpt.csproj">
+      <Project>{3975D054-C5DC-4BE3-9213-B1BBC3630DC0}</Project>
+      <Name>SolidOpt</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\SolidOpt\src\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
+      <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
+      <Name>Cecil.Decompiler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\SolidOpt\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
+      <Project>{D8F63DFF-5230-43E4-9AB2-DA6E721A1FAE}</Project>
+      <Name>Mono.Cecil</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\AstMethodDefinitionModel\AstMethodDefinitionModel.csproj">
       <Project>{009B19FC-7D5E-4F38-8421-7A63115C23E8}</Project>
       <Name>AstMethodDefinitionModel</Name>
