--- a/trunk/SolidOpt/src/SolidOpt.csproj
+++ b/trunk/SolidOpt/src/SolidOpt.csproj
@@ -26,9 +26,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
-    <Reference Include="Mono.Cecil">
-      <HintPath>vendors\Mono.Cecil\bin\$(Configuration)\Mono.Cecil.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -92,5 +89,9 @@
     <Compile Include="Core\Services\PluginServiceContainer.cs" />
     <Compile Include="Core\Services\ServiceContainer.cs" />
     <Compile Include="Optimizer\Transformers\ITransform.cs" />
+    <ProjectReference Include="vendors\Mono.Cecil\Mono.Cecil.csproj">
+      <Project>{D8F63DFF-5230-43E4-9AB2-DA6E721A1FAE}</Project>
+      <Name>Mono.Cecil</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
