Fixed NUnit framework usage

--- a/trunk/SolidOpt/test/test.csproj
+++ b/trunk/SolidOpt/test/test.csproj
@@ -27,7 +27,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
-    <Reference Include="nunit.framework" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -49,6 +48,10 @@
     <ProjectReference Include="..\src\vendors\NUnit\NUnit\src\NUnitCore\interfaces\nunit.core.interfaces.dll.csproj">
       <Project>{435428F8-5995-4CE4-8022-93D595A8CC0F}</Project>
       <Name>nunit.core.interfaces.dll</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\vendors\NUnit\NUnit\src\NUnitFramework\framework\nunit.framework.csproj">
+      <Project>{83DD7E12-A705-4DBA-9D71-09C8973D9382}</Project>
+      <Name>nunit.framework</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
