Constant propagation errors at compile time fixed and added post-build-debug|release. References of nop remover fixed. Redundant writes to console removed from loader. It is ready for screenshots.

--- a/trunk/doc/Demos/Examples/ConstantPropagation/ConstantPropagation.csproj
+++ b/trunk/doc/Demos/Examples/ConstantPropagation/ConstantPropagation.csproj
@@ -47,6 +47,10 @@
       <Project>{D8F63DFF-5230-43E4-9AB2-DA6E721A1FAE}</Project>
       <Name>Mono.Cecil</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AstMethodDefinitionModel\AstMethodDefinitionModel.csproj">
+      <Project>{009B19FC-7D5E-4F38-8421-7A63115C23E8}</Project>
+      <Name>AstMethodDefinitionModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ILtoAST\ILtoAST.csproj">
       <Project>79B42389-27F8-460B-9CDF-65342EA6699C</Project>
       <Name>ILtoAST</Name>
