--- a/trunk/SolidOpt/src/SolidOpt.csproj
+++ b/trunk/SolidOpt/src/SolidOpt.csproj
@@ -47,6 +47,23 @@
     <Folder Include="Cache" />
     <Folder Include="Optimizer" />
     <Folder Include="Optimizer\Transformers" />
+    <Folder Include="Services" />
+    <Folder Include="Services\GUI" />
+    <Folder Include="Services\Models" />
+    <Folder Include="Services\Subsystems" />
+    <Folder Include="Services\Subsystems\Cache" />
+    <Folder Include="Services\Subsystems\Configurator" />
+    <Folder Include="Services\Subsystems\Configurator\Mappers" />
+    <Folder Include="Services\Subsystems\Configurator\Sources" />
+    <Folder Include="Services\Subsystems\Configurator\Sources\Generators" />
+    <Folder Include="Services\Subsystems\Configurator\Targets" />
+    <Folder Include="Services\Subsystems\Configurator\TypeResolvers" />
+    <Folder Include="Services\Subsystems\HetAccess" />
+    <Folder Include="Services\Subsystems\HetAccess\Exporters" />
+    <Folder Include="Services\Subsystems\HetAccess\Importers" />
+    <Folder Include="Services\Transformations" />
+    <Folder Include="Services\Transformations\Multimodel" />
+    <Folder Include="Services\Transformations\Optimizations" />
     <Compile Include="Cache\CacheManager.cs" />
     <Compile Include="Core\Configurator\Mappers\INIMaper.cs" />
     <Compile Include="Core\Configurator\Mappers\MapManager.cs" />
@@ -89,6 +106,40 @@
     <Compile Include="Core\Services\PluginServiceContainer.cs" />
     <Compile Include="Core\Services\ServiceContainer.cs" />
     <Compile Include="Optimizer\Transformers\ITransform.cs" />
+    <Compile Include="Services\Subsystems\Cache\CacheManager.cs" />
+    <Compile Include="Services\Subsystems\Configurator\ConfigurationManager.cs" />
+    <Compile Include="Services\Subsystems\Configurator\IConfigLoader.cs" />
+    <Compile Include="Services\Subsystems\Configurator\IConfigSaver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Mappers\CustomMapperGroup.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Mappers\IConfigMapper.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Mappers\IdentityMapper.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Mappers\INIMaper.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Mappers\MapManager.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Mappers\Mapper.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Sources\IConfigSource.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Sources\ILSource.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Sources\INISource.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Sources\NMSPSource.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Targets\IConfigTarget.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Targets\ILTarget.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Targets\INITarget.cs" />
+    <Compile Include="Services\Subsystems\Configurator\Targets\NMSPTarget.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\CannotResolve.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\ChainResolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\FloatResolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\IdentityResolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\IntResolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\IR2Assembly.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\ITypeResolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\Resolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\StringResolver.cs" />
+    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\TypeManager.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\Exporters\FileExporter.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\Exporters\ISetURI.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\Importers\FileImporter.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\Importers\IGetURI.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\URIManager.cs" />
+    <Compile Include="Services\Transformations\ITransform.cs" />
     <ProjectReference Include="vendors\Mono.Cecil\Mono.Cecil.csproj">
       <Project>{D8F63DFF-5230-43E4-9AB2-DA6E721A1FAE}</Project>
       <Name>Mono.Cecil</Name>
