--- a/trunk/doc/Demos/Core/Loader/src/Loader.csproj
+++ b/trunk/doc/Demos/Core/Loader/src/Loader.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <None Include="Demos.sln" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Optimization Methods\TestPluginService\TestPluginService.csproj">
